新优化语言串生成

--- a/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
+++ b/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
@@ -3254,6 +3254,7 @@ mp3: mp3
 '公开': '公开'
 '--按题型--': '--按题型--'
 '--按从属--': '--按从属--'
+'标题，用一句话说清你的问题': '标题，用一句话说清你的问题'
 '点击编辑器按钮 <span style="color:red">[ ]</span>  可以插入填空项；也可手工输入，例如“今年是[[2014|马]]年”，回答“2014”或者“马”都算答对': '点击编辑器按钮 <span style="color:red">[ ]</span>  可以插入填空项；也可手工输入，例如“今年是[[2014|马]]年”，回答“2014”或者“马”都算答对'
 材料: 材料
 部分回答正确: 部分回答正确
