--- a/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
+++ b/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
@@ -3276,3 +3276,9 @@ Flash: Flash
 'Account #%userId% is not exist.': 'Account #%userId% is not exist.'
 'message must be a string': 'message must be a string'
 'UNKNOWN IMPORTER TYPE: %importerType%': 'UNKNOWN IMPORTER TYPE: %importerType%'
+'%display%的格式不正确': '%display%的格式不正确'
+'%display%必须大于或者等于%min%': '%display%必须大于或者等于%min%'
+'%display%必须小于或者等于%max%': '%display%必须小于或者等于%max%'
+'%display%的长度必须大于或等于%min%': '%display%的长度必须大于或等于%min%'
+'%display%的长度必须小于或等于%max%': '%display%的长度必须小于或等于%max%'
+'两次输入的%display%不一致，请重新输入': '两次输入的%display%不一致，请重新输入'
