shorten sign up page placeholders

--- a/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
+++ b/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
@@ -1497,13 +1497,13 @@ Email地址: 'Email Address'
 '完成验证后，你还可以：': 'after verification, you can'
 返回原页面: 'back to previous page'
 浏览首页: 'visit the home page'
-'填写你常用的邮箱作为登录帐号': 'use frequently used email address as login account'
-'填写你常用的手机号码作为登录帐号': 'use frequently used mobile phone number as login account'
-手机/邮箱: 'mobile phone number/email address'
-'填写你常用的邮箱或手机号码作为登录帐号': 'use frequently used email address or mobile phone number as login account'
-中、英文均可，最长18个英文或9个汉字: 'either in English or Chinese, up to 18 English letters or 9 Chinese characters'
-5-20位英文、数字、符号，区分大小写: '5-20 bit English letters, numbers, symbols, case sensitive'
-'填写你的短信验证码': 'type in your SMS verification code'
+'填写你常用的邮箱作为登录帐号': 'Use email as account'
+'填写你常用的手机号码作为登录帐号': 'Use mobile phone as account'
+手机/邮箱: 'mobile phone or email'
+'填写你常用的邮箱或手机号码作为登录帐号': 'Use email or mobile phone as account'
+中、英文均可，最长18个英文或9个汉字: 'No more than 18 letters'
+5-20位英文、数字、符号，区分大小写: '5-20 letters or numbers, case sensitive'
+'填写你的短信验证码': 'Input SMS verification code'
 '如果您有邀请码，请填写您的邀请码': 'if you have invitation code, please type in'
 服务协议: 'severice agreements'
 '系统暂时关闭注册，请联系管理员': 'registration stopped, please contact administrator'
