--- a/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
+++ b/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
@@ -1537,6 +1537,8 @@ Email地址: 'Email Address'
 教师: teacher
 小组话题: 'group topic'
 资讯: information
+'共找到<span>%count%</span>门<span>“%keywords%”</span>相关课程': 'Found <span>%count%</span> courses matching keyword <span>“%keywords%”</span>.'
+'共找到<span>%count%</span>门课程': 'Found <span>%count%</span> courses.'
 '没有搜到相关课程，请换个关键词试试！': 'cannot find related courses, please change your keyword'
 为您找到资讯结果约: 'about…results found for you'
 个: results
@@ -3267,8 +3269,7 @@ Firefox浏览器: Firefox
 '两次输入的%display%不一致，请重新输入': 'The values you input for %display% are different, please retry.'
 折: 折
 '请加入后再学习': '请加入后再学习'
-'共找到<span>%count%</span>门<span>“%keywords%”</span>相关课程': 'Found <span>%count%</span> courses matching keyword <span>“%keywords%”</span>.'
-'共找到<span>%count%</span>门课程': 'Found <span>%count%</span> courses.'
+课程分类: Course categories
 PPT: PPT
 Flash: Flash
 '--': '--'
