--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,14 @@
 CHANGELOG
 =========
+7.0.2（2016-08-11）
+优化：试题收藏功能课程有效期显示
+优化：班级旁听生购买逻辑
+优化：资讯热门评论显示逻辑
+优化：课程退款的文案提示
+优化：试卷批阅完成后流程优化
+修复：360浏览器下未发布课程详情页显示问题
+修复：小组成员显示不完全的问题
+
 7.0.1（2016-08-04）
 新增：视频指纹停留时长设置
 优化：录播公开课去除视频片头
